Bug 428737 - Incorrect header colors in System Settings and Discover
Summary: Incorrect header colors in System Settings and Discover
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.75.0
Platform: Other Linux
: VHI normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords:
: 430466 430527 431001 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-11-05 17:54 UTC by Carl Schwan
Modified: 2021-01-13 16:17 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
thumbnail (66.02 KB, image/png)
2020-11-05 17:54 UTC, Carl Schwan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Carl Schwan 2020-11-05 17:54:35 UTC
Created attachment 133057 [details]
thumbnail

SUMMARY

STEPS TO REPRODUCE
1. Color scheme: breeze light
2. Application style: breeze
3. Global Theme: breeze
4. QML kcm (QWidgets kcms look like in 5.19)

OBSERVED RESULT
See screenshot

EXPECTED RESULT
Similar look as in master

SOFTWARE/OS VERSIONS
Linux: openSUSE tumbleweed
KDE Plasma Version: 5.20.2
KDE Frameworks Version: 5.75.0 <- important
Qt Version: 5.15.1
Comment 1 Nate Graham 2020-11-05 18:00:46 UTC
Urgh, can reproduce.
Comment 2 Nate Graham 2020-12-08 20:13:29 UTC
I think I found the issue: using the new Breeze Light color scheme which includes header colors. Those colors are what trigger this effect. If you apply that color scheme on git master and then use Plasma 5.20, you'll get this glitch until you change your color scheme to a color scheme that doesn't have Header colors anymore.

While this is mildly annoying for some developers in some situations, I don't think this is a situation that users will ever run into, so there's no need to fix it aside from the general solution which is to fix https://phabricator.kde.org/T13663.
Comment 3 Nate Graham 2020-12-16 21:19:18 UTC
*** Bug 430466 has been marked as a duplicate of this bug. ***
Comment 4 Nowshed H. Imran 2020-12-17 17:48:48 UTC
I have tried changing the theme to breeze then breeze-dark.
Result is same.
Comment 5 Nate Graham 2020-12-18 19:33:13 UTC
*** Bug 430527 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2020-12-18 19:33:40 UTC
Re-opening as we're getting dupes from people using dark themes with currently released packages, not git master stuff. :(
Comment 7 Nate Graham 2020-12-18 19:34:56 UTC
Could be an issue in how Kirigami falls back to non-header colors, or it could be an issue with color inheritance in the KCM template or System Settings.

Any ideas, Noah?
Comment 8 Noah Davis 2020-12-18 20:32:55 UTC
(In reply to Nate Graham from comment #7)
> Could be an issue in how Kirigami falls back to non-header colors, or it
> could be an issue with color inheritance in the KCM template or System
> Settings.
> 
> Any ideas, Noah?

Unfortunately no. I thought I did everything necessary to prevent this from happening (except in plasma themes where there are 2 conflicting ways to get fallback colors). I can't reproduce the issue on git master and this issue shouldn't happen on the latest stable version since header colors are generated from window colors.
Comment 9 Nate Graham 2020-12-30 20:44:15 UTC
I also can't reproduce it on git master. I guess the upshot is that this should fix itself automatically once people upgrade to Plasma 5.21, but still, it would be nice to figure out how to fix it for others too.
Comment 10 Nate Graham 2021-01-04 23:03:49 UTC
*** Bug 431001 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2021-01-04 23:08:51 UTC
Getting reports from non-systemsettings apps like Discover. Moving to Kirigami.
Comment 12 Bug Janitor Service 2021-01-13 10:35:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/qqc2-desktop-style/-/merge_requests/49
Comment 13 Marco Martin 2021-01-13 16:17:02 UTC
Git commit 7cdeaab75171b4126ba9026875539108a834a577 by Marco Martin.
Committed on 13/01/2021 at 10:21.
Pushed by mart into branch 'master'.

Support QQuickWidget

when we are in a qquickwidget, our window is not the real window
and will never have "active" we need to instead detect the
real render window and watch that instead

M  +31   -17   kirigami-plasmadesktop-integration/plasmadesktoptheme.cpp
M  +1    -0    kirigami-plasmadesktop-integration/plasmadesktoptheme.h

https://invent.kde.org/frameworks/qqc2-desktop-style/commit/7cdeaab75171b4126ba9026875539108a834a577