Support QQuickWidget

when we are in a qquickwidget, our window is not the real window
and will never have "active" we need to instead detect the
real render window and watch that instead

BUG:428737